Added ritcheyScience event and new images.

--- a/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
+++ b/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
@@ -10,14 +10,15 @@
     '/image/bioinfo/events/bigDataConf2022/IMG_0576.jpg',
     '/image/bioinfo/events/bigDataConf2022/IMG_0577.jpg',
     '/image/bioinfo/events/bigDataConf2022/IMG_0578.jpg',
-    '/image/bioinfo/events/bigDataConf2022/IMG_0579.jpg',
     '/image/bioinfo/events/bigDataConf2022/IMG_0580.jpg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191935611.MP.jpg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191946946.MP.jpg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191948898.jpeg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_192238338.MP.jpg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_194533521.MP.jpg',
-    '/image/bioinfo/events/bigDataConf2022/PXL_20220518_194535879.jpeg'
+    '/image/bioinfo/events/bigDataConf2022/PXL_20220518_194535879.jpeg',
+    '/image/bioinfo/events/bigDataConf2022/PXL_20220517_203939219.MP.jpg',
+    '/image/bioinfo/events/bigDataConf2022/PXL_20220517_203858340.MP.jpg'
     ]
   }
 %}
