Added new news, updated event and updated timing for the autoslider.

--- a/src/views/pages/events/ritcheyScience/content.njk
+++ b/src/views/pages/events/ritcheyScience/content.njk
@@ -1,14 +1,14 @@
 <p class="event-desc">
-Angela Zhan, a high school student at the Logan High School, Logan (UT) recently participated in 
-various state-level and international science fairs and won awards. 
-In March, Angela presented her bioinformatics work, “<em>Predicting virus-human interactions to 
-facilitate the design of anti-coronavirus vaccines and therapeutics</em>” at the Ritchey Science & Engineering 
-Fair (<a href="https://ritchey.zfairs.com/?f=b07c3847-b44a-4f57-abd1-a60a95e20893" target="_blank" class="kbl-link">RSEF</a>), and won the <b>Second place</b> in the Category of Medical and Health Sciences and the 
-Regeneron Biomedical Science Award. She was selected as a finalist to attend the International 
-Science and Engineering Fair (ISEF) in Atlanta in May. Angela <a href="https://projectboard.world/isef/finalist-booth/cbio057---predicting-virus-human-interactions"
-target="_blank" class="kbl-link">presented</a> at the ISEF recently in 
-Atlanta in the category of <em>Computational Biology & Bioinformatics</em>. The Regeneron International 
-Science and Engineering Fair (<a href="https://www.societyforscience.org/" target="_blank" class="kbl-link">Regeneron ISEF</a>) is the world's largest global science competition 
-for high schoolers. Contestants are competitively selected from regional, district, and state ISEF affiliated 
-fairs.
+Angela Zhan, a high school student at the Logan High School, Logan (UT) recently participated in various state-level and international science 
+fairs and won awards. In March, Angela presented her bioinformatics work, “<em>Predicting virus-human interactions to facilitate the design of 
+anti-coronavirus vaccines and therapeutics</em>” at the Ritchey Science & Engineering Fair 
+(<a href="https://ritchey.zfairs.com/?f=b07c3847-b44a-4f57-abd1-a60a95e20893" target="_blank" class="kbl-link">RSEF</a>), 
+hosted at Weber State University. She won the Regeneron Biomedical Science Award, and <b>Second place</b> in the Category 
+of Medical and Health Sciences. She was also selected as one of the four 
+<b>Finalists</b> to attend the Regeneron International Science and Engineering Fair (ISEF) at Atlanta, Georgia from May 07 - May13. Angela 
+<a href="https://projectboard.world/isef/finalist-booth/cbio057---predicting-virus-human-interactions" target="_blank" class="kbl-link">presented</a> 
+at the ISEF recently in the category of <em>Computational Biology & Bioinformatics</em>, and discussed her research with leading experts and other 
+high school researchers from all over the world. The <a href="https://www.societyforscience.org/" target="_blank" class="kbl-link">Regeneron ISEF</a> 
+is the world's largest global science competition for high schoolers. 
+Contestants are competitively selected from regional, district, and state ISEF affiliated fairs. 
 </p>
