--- a/src/views/pages/events/ritcheyScience/ritcheyScience.njk
+++ b/src/views/pages/events/ritcheyScience/ritcheyScience.njk
@@ -9,7 +9,8 @@
     '/image/bioinfo/events/ritcheyScience/20220510-2.jpg',
     '/image/bioinfo/events/ritcheyScience/20220511-2.jpeg',
     '/image/bioinfo/events/ritcheyScience/20220508-4.jpg',
-    '/image/bioinfo/events/ritcheyScience/20220510-5.jpeg'
+    '/image/bioinfo/events/ritcheyScience/20220510-5.jpeg',
+    '/image/bioinfo/events/ritcheyScience/IMG_20220325_201607_1.jpg'
     ]
   }
 %}
