--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,13 @@
+{% set profeatx = {
+    title: "ProFeatX: A New Tool to Extract Protein Features",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/profeatx.png?a=height&w=6&h=6",
+    date: "May 31, 2022",
+    desc: "ProFeatX is a tool to help you extract protein features in a fast and efficient way. It contains 32 encodings to help facilitate this process.
+    By extracting these features, you can use them as input for machine learning methods.",
+    link: "/news/profeatx"
+  }
+%}
+
 {% set apogeeInstruments = {
     title: "Raghav Awarded Campbell Scientific Graduate Fellowship",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/news/apogeeInstruments.jpg?a=height&w=6&h=6",
@@ -142,6 +152,6 @@ benchmark were implement in the DeepHPI webserver",
 %}
 
 {% set general = [apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
-{% set science = [alfanet,newdeephpi,covidtracker] %}
+{% set science = [profeatx,alfanet,newdeephpi,covidtracker] %}
 {% set media = [heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [apogeeInstruments,newAdminColin,newAndrew] %}
+{% set latest = [profeatx,apogeeInstruments,newAdminColin] %}
