Edited papers and news events.

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -119,6 +119,38 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
+{% set cultivate = {
+    title: "Bioinformatics: Big Data Pushing the Boundaries of Human Knowledge ",
+    date: "March 1, 2022",
+    desc: "View the cultivate magazine for more info.",
+    link: "https://digitalcommons.usu.edu/cultivate/"
+  }
+%}
+
+{% set capitolHill = {
+    title: "USU Today - Students Prepare to Present Research at State Capitol",
+    date: "February 1, 2022",
+    desc: "A group of undergraduates will share their research findings at the annual Research on Capitol Hill.",
+    link: "https://www.usu.edu/today/story/students-prepare-to-present-research-at-state-capitol"
+  }
+%}
+
+{% set boundaries = {
+    title: "USU Today - USU Bioinformatics Expert Hopes Big Data Lab Will Revolutionize More Fields of Research ",
+    date: "January 10, 2022",
+    desc: "Rakesh Kaundal's Contributions to Bioinformatics Push the Boundaries of Human Knowledge",
+    link: "https://www.usu.edu/today/story/usu-bioinformatics-expert-hopes-big-data-lab-will-revolutionize-more-fields-of-research/"
+  }
+%}
+
+{% set weedRevolution = {
+    title: "USU Today - USU Student Uses Undergraduate Research Grant to Train AI for Weeding",
+    date: "December 14, 2021",
+    desc: "The artificial intelligence revolution is coming, and there is nowhere to hide — at least, not for weeds.",
+    link: "https://www.usu.edu/today/story/usu-student-uses-undergraduate-research-grant-to-train-ai-for-weeding"
+  }
+%}
+
 {% set heroesNight = {
     title: "USU Today - First International Heroes Night",
     date: "November 4, 2021",
@@ -145,7 +177,7 @@ benchmark were implement in the DeepHPI webserver",
 
 {% set undergradGrants = {
     title: "USU Today - Students Receive Grants to Conduct Undergraduate Research",
-    date: "March 24, 2021",
+    date: "May 24, 2021",
     desc: "Kolton Hauck is using big data to investigate diverse strands of SARS-CoV-2 virus.",
     link: "https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research"
   }
@@ -153,5 +185,5 @@ benchmark were implement in the DeepHPI webserver",
 
 {% set general = [apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [profeatx,alfanet,newdeephpi,covidtracker] %}
-{% set media = [heroesNight,nihFunds,saltStress,undergradGrants] %}
-{% set latest = [profeatx,apogeeInstruments,newAdminColin] %}
+{% set media = [cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
+{% set latest = [cultivate, capitolHill, boundaries] %}
