--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,5 +1,12 @@
 {% set pub2022 = [
     {
+    authors:'<u><em>Kataria, R.</em></u> and Kaundal, R<sup>*</sup>.',
+    content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. IF=5.753.',
+    doiLink:'publications?content=pub',
+    doiTitle:'(In Press)',
+    year:'2022'
+  },
+    {
     authors:'<em><u>Kataria, R.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
     content:'A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em>. IF=5.321. PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8910311/" class="kbl-link" target="_blank">8910311</a>',
     doiLink:'publications?content=pub',
