Changed events page width, fixed publications tiltles and others.

--- a/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
+++ b/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
@@ -23,4 +23,4 @@
   }
 %}
 
-{{ eventPage("Dr. Kaundal and Lab Members Presented at the Statistics Bigdata Conference", "bigDataConf2022", event) }}
+{{ eventPage("KAABiL Members Presented at the Bigdata Conference", "bigDataConf2022", event) }}
