--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -43,7 +43,7 @@
           <div class="col-sm-6">
             {% set bigDataConf2022 = {
                 link: '/events/bigDataConf2022',
-                title: 'Dr. Kaundal and Lab Members Presented at the Statistics Bigdata Conference',
+                title: 'KAABiL Members Presented at the Bigdata Conference',
                 location: 'Utah State University, Logan, UT',
                 date: 'May 16-19, 2022',
                 img: '/image/bioinfo/events/bigDataConf2022/PXL_20220518_191935611.MP.jpg'
