--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,6 +1,6 @@
 {% set profeatx = {
     title: "ProFeatX: A New Tool to Extract Protein Features",
-    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/profeatx.png?a=height&w=6&h=6",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/news/proFeatX.png?a=height&w=6&h=6",
     date: "May 31, 2022",
     desc: "ProFeatX is a tool to help you extract protein features in a fast and efficient way. It contains 32 encodings to help facilitate this process.
     By extracting these features, you can use them as input for machine learning methods.",
@@ -120,7 +120,7 @@ benchmark were implement in the DeepHPI webserver",
 %}
 
 {% set cultivate = {
-    title: "Bioinformatics: Big Data Pushing the Boundaries of Human Knowledge ",
+    title: "Cultivate - Bioinformatics: Big Data Pushing the Boundaries of Human Knowledge ",
     date: "March 1, 2022",
     desc: "View the cultivate magazine for more info.",
     link: "https://digitalcommons.usu.edu/cultivate/"
