--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -8,9 +8,9 @@
   },
     {
     authors:'<em><u>Kataria, R.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
-    content:'A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em>. IF=5.321. PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8910311/" class="kbl-link" target="_blank">8910311</a>',
-    doiLink:'publications?content=pub',
-    doiTitle:'(In Press)',
+    content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em>. IF=5.321. PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
+    doiLink:'https://doi.org/10.1186/s13007-022-00897-9',
+    doiTitle:'https://doi.org/10.1186/s13007-022-00897-9',
     year:'2022'
   },
   {
