--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -39,8 +39,8 @@
     {% from "./_tool-section.njk" import toolSection %}
     {% from "./_tool-data.njk" import hpi, clpt, metagenomics, dbs, bioenergy, ngsPackages, descriptors, disease %}
 
-    {{ toolSection("Host-Pathogen Interaction Prediction Tools", hpi, "hpi") }}
-    {{ toolSection("Cellular Localization Prediction Tools", clpt, "cellularloc") }}
+    {{ toolSection("Host-Pathogen Interactions", hpi, "hpi") }}
+    {{ toolSection("Subcellular Localization Predictions", clpt, "cellularloc") }}
     {{ toolSection("Databases", dbs, "db") }}
     {{ toolSection("Metagenomics", metagenomics, "metagenomics") }}
     {{ toolSection("NGS Packages", ngsPackages, "ngsPack") }}
