--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -11,9 +11,9 @@
 
     <article class="container blog" style="margin-top: 103px;">
       <div class="row justify-content-center">
-        <div class="col-6 text-center">
+        <div class="col-12 text-center">
           <h1 class="text-center blog">{{ title }}</h1>
-          <img class="img-fluid col-12 p-0 event-img" src="{{ RaikouServer }}{{ event.img }}">
+          <img class="img-fluid col-12 col-md-10 col-lg-8 p-0 event-img" src="{{ RaikouServer }}{{ event.img }}">
           <section class="text-start event-details mt-2">
             <span class="me-4 kbl-text-soft"><i class="ion-location me-2"></i>{{ event.location }}</span>
             <span class="kbl-text-soft"><i class="ion-calendar me-3"></i>{{ event.date }}</span>
