Updating images for the big data conference.

--- a/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
+++ b/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
@@ -18,7 +18,11 @@
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_194533521.MP.jpg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220518_194535879.jpeg',
     '/image/bioinfo/events/bigDataConf2022/PXL_20220517_203939219.MP.jpg',
-    '/image/bioinfo/events/bigDataConf2022/PXL_20220517_203858340.MP.jpg'
+    '/image/bioinfo/events/bigDataConf2022/PXL_20220517_203858340.MP.jpg',
+    '/image/bioinfo/events/bigDataConf2022/34_Panel4.jpg',
+    '/image/bioinfo/events/bigDataConf2022/4_ag-stats-group-2.jpg',
+    '/image/bioinfo/events/bigDataConf2022/27_Presentation2.jpeg',
+    '/image/bioinfo/events/bigDataConf2022/30_PosterDisplay1.JPG'
     ]
   }
 %}
