Updating link for atSub.

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -22,7 +22,7 @@
 {% set atSubP = {
     img: "/image/bioinfo/tools/atsubp.png",
     title: "AtSubP",
-    link: "http://bioinfo3.noble.org/AtSubP/"
+    link: " https://www.zhaolab.org/AtSubP/index.php"
   }
 %}
 
