Lots of changes. New news event, removed the spacing between the header and the subtitle links, etc.

--- a/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
+++ b/src/views/pages/events/bigDataConf2022/bigDataConf2022.njk
@@ -27,4 +27,4 @@
   }
 %}
 
-{{ eventPage("KAABiL Members Presented at the Bigdata Conference", "bigDataConf2022", event) }}
+{{ eventPage("KAABiL Members Presented at Statistics Conference", "bigDataConf2022", event) }}
