--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -7,14 +7,14 @@
     year:'2022'
   },
     {
-    authors:'<em><u>Kataria, R.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
-    content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em>. IF=5.321. PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
+    authors:'<em><u>Kataria, R.</u></em> and Kaundal, R<sup>*</sup>.',
+    content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em> 18, Article number: 73 (2022). IF=5.321. PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
     doiLink:'https://doi.org/10.1186/s13007-022-00897-9',
     doiTitle:'https://doi.org/10.1186/s13007-022-00897-9',
     year:'2022'
   },
   {
-    authors:'<b>Kaundal, R.</b><sup>$*</sup>, <em><u>Loaiza, C.D.</u></em><sup>$</sup>, <em><u>Duhan, N.</u></em> and Flann, N.',
+    authors:'Kaundal, R.<sup>$*</sup>, <em><u>Loaiza, C.D.</u></em><sup>$</sup>, <em><u>Duhan, N.</u></em> and Flann, N.',
     content:'deepHPI: a comprehensive Deep Learning platform for accurate prediction and visualization of host-pathogen protein-protein interactions. <em>Briefings in Bioinformatics</em> bbac125: 1-11. IF=11.622. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35511057/" class="kbl-link" target="_blank">35511057</a>',
     doiLink:'https://doi.org/10.1093/bib/bbac125',
     doiTitle:'https://doi.org/10.1093/bib/bbac125',
