--- a/src/views/components/breadcrumb.njk
+++ b/src/views/components/breadcrumb.njk
@@ -1,6 +1,6 @@
-{% macro breadcrumb(links=[]) %}
+{% macro breadcrumb(links=[], topMarginMod=-3.2) %}
   {% set lastIndex = links.length - 1 %}
-  <div class="container-fluid mx-0 px-0">
+  <div class="container-fluid mx-0 px-0" style="margin-top: {{topMarginMod}}rem !important;">
     <ol class="breadcrumb" style="padding-left: 180px!important;">
       {% for link in links %}
         {% if loop.last %}
