Added magazine type to news cards.

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -131,65 +131,74 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
+
 {% set cultivate = {
-    title: "Cultivate - Bioinformatics: Big Data Pushing the Boundaries of Human Knowledge ",
+    title: "Bioinformatics: Big Data Pushing the Boundaries of Human Knowledge ",
     date: "March 1, 2022",
+    type: "Cultivate",
     desc: "View the cultivate magazine for more info.",
     link: "https://digitalcommons.usu.edu/cultivate/"
   }
 %}
 
 {% set capitolHill = {
-    title: "USU Today - Students Prepare to Present Research at State Capitol",
+    title: "Students Prepare to Present Research at State Capitol",
     date: "February 1, 2022",
+    type: "USU Today",
     desc: "A group of undergraduates will share their research findings at the annual Research on Capitol Hill.",
     link: "https://www.usu.edu/today/story/students-prepare-to-present-research-at-state-capitol/"
   }
 %}
 
 {% set boundaries = {
-    title: "USU Today - USU Bioinformatics Expert Hopes Big Data Lab Will Revolutionize More Fields of Research ",
+    title: "USU Bioinformatics Expert Hopes Big Data Lab Will Revolutionize More Fields of Research ",
     date: "January 10, 2022",
+    type: "USU Today",
     desc: "Rakesh Kaundal's Contributions to Bioinformatics Push the Boundaries of Human Knowledge",
     link: "https://www.usu.edu/today/story/usu-bioinformatics-expert-hopes-big-data-lab-will-revolutionize-more-fields-of-research/"
   }
 %}
 
 {% set weedRevolution = {
-    title: "USU Today - USU Student Uses Undergraduate Research Grant to Train AI for Weeding",
+    title: "USU Student Uses Undergraduate Research Grant to Train AI for Weeding",
     date: "December 14, 2021",
+    type: "USU Today",
     desc: "The artificial intelligence revolution is coming, and there is nowhere to hide — at least, not for weeds.",
     link: "https://www.usu.edu/today/story/usu-student-uses-undergraduate-research-grant-to-train-ai-for-weeding/"
   }
 %}
 
 {% set heroesNight = {
-    title: "USU Today - First International Heroes Night",
+    title: "First International Heroes Night",
     date: "November 4, 2021",
+    type: "USU Today",
     desc: "Dr. Rakesh Kaundal has been selected for the 2021 International Faculty Recognition Award.",
     link: "https://www.usu.edu/today/story/first-international-heroes-night-to-celebrate-international-faculty/"
   }
 %}
 
 {% set nihFunds = {
-    title: "USU Today - NIH Funds USU Researchers' Work on Fathers' Nutrition and Children's Health",
+    title: "NIH Funds USU Researchers' Work on Fathers' Nutrition and Children's Health",
     date: "August 9, 2021",
+    type: "USU Today",
     desc: "Dr. Kaundal is a Co-PI on a $1.56M research grant from the NIH.",
     link: "https://www.usu.edu/today/story/nih-funds-usu-researchers-work-on-fathers-nutrition-and-childrens-health/"
   }
 %}
 
 {% set saltStress = {
-    title: "USU Today - Uncovering Genes that Protect Alfalfa against Salinity Stress",
+    title: "Uncovering Genes that Protect Alfalfa against Salinity Stress",
     date: "April 6, 2021",
+    type: "USU Today",
     desc: "Salt stress is an example of big data bringing immense benefits to plant science.",
     link: "https://www.usu.edu/today/story/data-scientists-uncovering-genes-that-protect-alfalfa-against-salinity-stress/"
   }
 %}
 
 {% set undergradGrants = {
-    title: "USU Today - Students Receive Grants to Conduct Undergraduate Research",
+    title: "Students Receive Grants to Conduct Undergraduate Research",
     date: "May 24, 2021",
+    type: "USU Today",
     desc: "Kolton Hauck is using big data to investigate diverse strands of SARS-CoV-2 virus.",
     link: "https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research/"
   }
