Added backslash to the back of the tools address.

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -8,21 +8,21 @@
 {% set apinet = {
     img: "/image/bioinfo/tools/api-net.PNG",
     title: "AP-iNET",
-    link: "http://bioinfo.usu.edu/AP-iNET"
+    link: "http://bioinfo.usu.edu/AP-iNET/"
   }
 %}
 
 {% set plantmSubp = {
     img: "/image/bioinfo/tools/plantmSubp.PNG",
     title: "Plant-mSubP",
-    link: "http://bioinfo.usu.edu/Plant-mSubP"
+    link: "http://bioinfo.usu.edu/Plant-mSubP/"
   }
 %}
 
 {% set atSubP = {
     img: "/image/bioinfo/tools/atsubp.png",
     title: "AtSubP",
-    link: " https://www.zhaolab.org/AtSubP/index.php"
+    link: " https://www.zhaolab.org/AtSubP/index.php/"
   }
 %}
 
@@ -36,7 +36,7 @@
 {% set plPred = {
     img: "/image/bioinfo/tools/plpred.PNG",
     title: "PLpred",
-    link: "http://bioinfo.usu.edu/PLpred"
+    link: "http://bioinfo.usu.edu/PLpred/"
   }
 %}
 
@@ -57,21 +57,21 @@
 {% set legumeSSRdb = {
     img: "/image/bioinfo/tools/legumessdb.png",
     title: "legumeSSRdb",
-    link: "http://bioinfo.usu.edu/legumeSSRdb"
+    link: "http://bioinfo.usu.edu/legumeSSRdb/"
   }
 %}
 
 {% set lacSubPred = {
     img: "/image/bioinfo/tools/lacsubpred.PNG",
     title: "LacSubPred",
-    link: "http://bioinfo.usu.edu/lacsubpred"
+    link: "http://bioinfo.usu.edu/lacsubpred/"
   }
 %}
 
 {% set ligPred = {
     img: "/image/bioinfo/tools/ligpred.PNG",
     title: "LigPred",
-    link: "http://bioinfo.usu.edu/ligpred"
+    link: "http://bioinfo.usu.edu/ligpred/"
   }
 %}
 
@@ -106,7 +106,7 @@
 {% set huco = {
     img: "/image/bioinfo/tools/covid.jpg",
     title: "HuCoPIA",
-    link: "http://bioinfo.usu.edu/hucopia/home"
+    link: "http://bioinfo.usu.edu/hucopia/home/"
   }
 %}
 
@@ -148,7 +148,7 @@
 {% set tritikbdb = {
     img: "/image/bioinfo/tools/tritikbdb.png",
     title: "TritiKBdb",
-    link: "http://bioinfo.usu.edu/tritikbdb"
+    link: "http://bioinfo.usu.edu/tritikbdb/"
   }
 %}
 
