Fixed typos and removed 's' from Predictions.

--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -54,7 +54,7 @@
           <div class="col-sm-6">
             {% set koltonCapitolHill = {
                 link: '/events/koltonCapitolHill',
-                title: 'Kolton Presents at Reasearch on Capitol Hill',
+                title: 'Kolton Presents at Research on Capitol Hill',
                 location: 'Capitol Hill, Salt Lake City, UT',
                 date: 'Feb 8, 2022',
                 img: '/image/raw/bioinfo/events/koltonCapitolHill/DSC04533.jpg'
