--- a/src/views/pages/events/koltonCapitolHill/koltonCapitolHill.njk
+++ b/src/views/pages/events/koltonCapitolHill/koltonCapitolHill.njk
@@ -29,4 +29,4 @@
   }
 %}
 
-{{ eventPage("Kolton Presents at Reasearch on Capitol Hill", "koltonCapitolHill", event) }}
+{{ eventPage("Kolton Presents at Research on Capitol Hill", "koltonCapitolHill", event) }}
