--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -33,7 +33,7 @@
   name: "Tools",
   options: [
     {name: "Host-Pathogen Interactions", link: "/tools#hpi"},
-    {name: "Cellular Localization Prediction", link: "/tools#cellularloc"},
+    {name: "Subcellular Localization Prediction", link: "/tools#cellularloc"},
     {name: "Databases", link: "/tools#db"},
     {name: "Metagenomics", link: "/tools#metagenomics"},
     {name: "NGS Packages", link: "/tools#ngsPack"},
