Updated news pages to have an image.

--- a/src/views/pages/news/citsatdb/citsatdb.njk
+++ b/src/views/pages/news/citsatdb/citsatdb.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("Naveen Presents Poster on citSATdb", "citsatdb") }}
+{{ newNewsPage("Naveen Presents Poster on citSATdb", "citsatdb","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/events/IMG_20200113_151858.jpg") }}
