--- a/src/views/pages/news/apogeeInstruments/apogeeInstruments.njk
+++ b/src/views/pages/news/apogeeInstruments/apogeeInstruments.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("Raghav Awarded Campbell Scientific Graduate Fellowship", "apogeeInstruments") }}
+{{ newNewsPage("Raghav Awarded Campbell Scientific Graduate Fellowship", "apogeeInstruments","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/news/apogeeInstruments.jpg") }}
