--- a/src/views/pages/news/covidtracker/covidtracker.njk
+++ b/src/views/pages/news/covidtracker/covidtracker.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("KAABiL COVID-19 Tracker", "covidtracker") }}
+{{ newNewsPage("KAABiL COVID-19 Tracker", "covidtracker","https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg") }}
