--- a/src/views/pages/news/mitchell/mitchell.njk
+++ b/src/views/pages/news/mitchell/mitchell.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New PhD Student: David", "newDavid") }}
+{{ newNewsPage("New Intern: Mitchell Millerberg", "mitchell","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/mitchell.jpg") }}
