--- a/src/views/pages/news/newAdminColin/newAdminColin.njk
+++ b/src/views/pages/news/newAdminColin/newAdminColin.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New HPC Admin: Colin Bernhardt", "newAdminColin") }}
+{{ newNewsPage("New HPC Admin: Colin Bernhardt", "newAdminColin","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/colin.jpg") }}
