--- a/src/views/pages/news/newAndrew/newAndrew.njk
+++ b/src/views/pages/news/newAndrew/newAndrew.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New Undergrad Student Joined: Andrew Jouffray", "newAndrew") }}
+{{ newNewsPage("New Undergrad Student Joined: Andrew Jouffray", "newAndrew","http://bioinfocore.usu.edu/raikou/image/raw/people/ajouffray/profile.jpg") }}
