--- a/src/views/pages/news/newDavid/newDavid.njk
+++ b/src/views/pages/news/newDavid/newDavid.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New PhD Student: David", "newDavid") }}
+{{ newNewsPage("New PhD Student: David", "newDavid","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/david.jpg") }}
