--- a/src/views/pages/news/newKolton/newKolton.njk
+++ b/src/views/pages/news/newKolton/newKolton.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New Undergrad Student Joined: Kolton Hauck", "newKolton") }}
+{{ newNewsPage("New Undergrad Student Joined: Kolton Hauck", "newKolton","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/khauck.jpg") }}
