--- a/src/views/pages/news/newadmin1/newadmin1.njk
+++ b/src/views/pages/news/newadmin1/newadmin1.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("New HPC Admin", "newadmin1") }}
+{{ newNewsPage("New HPC Admin", "newadmin1","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/shelby.jpg") }}
