--- a/src/views/pages/news/newdeephpi/newdeephpi.njk
+++ b/src/views/pages/news/newdeephpi/newdeephpi.njk
@@ -1,3 +1,3 @@
-{% from "pages/news/template.njk" import newsPage %}
+{% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newsPage("deepHPI is Online!", "newdeephpi", "deepHPi") }}
+{{ newNewsPage("deepHPI is Online!", "newdeephpi", "http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/events/PAG-2019/g2.jpg") }}
