Adding google analytics information.

--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -24,5 +24,9 @@
     <link href="assets/css/relic.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/kbl-css/style.css">
     <link rel="icon" href="{{ RaikouServer }}/image/bioinfo/red_logo.png">
+
+    <!-- Google Analytics Ownership Verification -->
+    <meta name="google-site-verification" content="2-Svhw9Qhe5EAIfA5keJ6nM8aomIIuqilidnNb-QF8s" />
+    
 </head>
 {% endmacro %}
